Since version 1.11.0 Pycairo uses `Semantic Versioning
<http://semver.org/>`__ i.e. the newest version is the latest stable one.

.. _v1.17.0:

1.17.0 - 2018-??-??
-------------------

* :class:`cairo.Surface` and :class:`cairo.Device` can now be used as context
  managers. :bug:`103`
* Fix a leak when a cairo error was raised.
* Fix a leak when a mapped surface was GCed instead of unmapped.


.. _v1.16.3:

1.16.3 - 2018-02-27
-------------------

* Ship Python type annotation stubs. They are currently supported by mypy and
  PyCharm. :bug:`99` :pr:`101`


.. _v1.16.2:

1.16.2 - 2018-02-10
-------------------

* setup.py: Some fixes for Debian pybuild quirks. :bug:`98`


.. _v1.16.1:

1.16.1 - 2018-02-06
-------------------

* setup.py: correctly install pkgconfig into /usr/lib* again.
  To make JHBuild on Fedora work the following patch is needed:
  https://bugzilla.gnome.org/show_bug.cgi?id=793216


.. _v1.16.0:

1.16.0 - 2018-02-05
-------------------

* Add a :func:`get_include` function which returns the compiler include path
  needed for interfacing with the Pycairo C API :bug:`92`
* Note for packagers: The default header installation path has changed, but a
  compat header is installed to the old location to prevent breakage in case
  anyone has hardcoded the old path instead of using pkg-config.
  Just in case anyone is wondering why there are two header files now.


.. _v1.15.6:

1.15.6 - 2018-01-30
-------------------

* Experimental PyPy and PyPy3 support :bug:`90`


.. _v1.15.5:

1.15.5 - 2018-01-29
-------------------

* Support Unicode paths under Windows with cairo 1.15.10+ :pr:`87`
* Don't include the pkg-config file when building a wheel :bug:`83`


.. _v1.15.4:

1.15.4 - 2017-11-08
-------------------

Fixes:
  * Fix some enum conversation errors with (unused) large and negative values.
    :pr:`81`

Tests:
  * Fix a rare test error :pr:`80` (:user:`Sergei Trofimovich <trofi>`)


.. _v1.15.3:

1.15.3 - 2017-09-17
-------------------

Fixes: