@@ -5,6 +5,6 @@ include MANIFEST.in
 include setup.cfg
 recursive-include docs *.py Makefile *.rst *.css *.svg
 prune docs/_build
-recursive-include tests *.py README *.c
+recursive-include tests *.py README *.c *.h
 recursive-include examples *.py README
 include cairo/*.h
