@@ -249,11 +249,17 @@ typedef struct {
 
 #else
 
+#ifdef PYCAIRO_NO_IMPORT
+
+extern Pycairo_CAPI_t *Pycairo_CAPI;
+
+#else
+
 /* To access the Pycairo C API, the client module should call 'import_cairo()'
  * from the init<module> function, and check the return value, < 0 means the
  * import failed.
  */
-static Pycairo_CAPI_t *Pycairo_CAPI;
+Pycairo_CAPI_t *Pycairo_CAPI;
 
 /* Return -1 on error, 0 on success.
  * PyCapsule_Import will set an exception if there's an error.
@@ -264,6 +270,8 @@ import_cairo(void)
   Pycairo_CAPI = (Pycairo_CAPI_t*) PyCapsule_Import("cairo.CAPI", 0);
   return (Pycairo_CAPI != 0) ? 0 : -1;
 }
+
+#endif
 
 #endif
 
