@@ -1,18 +1,7 @@
 #include <Python.h>
 /* not pycairo3.h because we use the one from the source directory */
 #include <pycairo.h>
-
-static Pycairo_CAPI_t *Pycairo_CAPI;
-
-static PyObject *
-create_image_surface (PyObject *self, PyObject *args)
-{
-    cairo_surface_t *surface;
-
-    surface = cairo_image_surface_create (CAIRO_FORMAT_ARGB32, 10, 10);
-
-    return PycairoSurface_FromSurface (surface, NULL);
-}
+#include "cmodulelib.h"
 
 static PyMethodDef CModMethods[] = {
     {"create_image_surface", create_image_surface, METH_NOARGS, NULL},
@@ -20,6 +9,8 @@ static PyMethodDef CModMethods[] = {
 };
 
 #if PY_MAJOR_VERSION < 3
+
+Pycairo_CAPI_t *Pycairo_CAPI;
 
 PyMODINIT_FUNC
 initcmod (void)
